--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=progra1proyecto2.Progra1Proyecto2
+main.class=progra1proyecto2.Rivera_Steve_ProyectoJuego
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
